welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: not found: value nums
  for (k<-0 to nums.length-1){
               ^island:4: error: not found: value nums
    if (nums(k)!=nums(k+1)){
        ^island:4: error: not found: value nums
    if (nums(k)!=nums(k+1)){
                 ^