welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var A:Int=0
  for (k<-0 to nums.length-1){
    if (nums(k)!=nums(k+1)){
      A=A+1
    }
  }
  return A
}